# amazon-timestream-tools

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_README.md
integrations/: demo.ipynb
integrations/influxdb_connector/influxdb-timestream-connector/: Cargo.toml  README.md  samconfig.toml  template.yml
integrations/influxdb_connector/influxdb-timestream-connector/docs/adr/: require-line-protocol-tags.md
integrations/influxdb_connector/influxdb-timestream-connector/src/: lib.rs  line_protocol_parser.rs  main.rs  metric.rs  records_builder.rs  timestream_utils.rs
integrations/influxdb_connector/influxdb-timestream-connector/src/line_protocol_parser/: tests.rs
integrations/influxdb_connector/influxdb-timestream-connector/src/records_builder/: multi_table_multi_measure_builder.rs  tests.rs
integrations/influxdb_connector/influxdb-timestream-connector/tests/: integration_test.rs
integrations/influxdb_connector/sample-influxdb-clients/: README.md
integrations/influxdb_connector/sample-influxdb-clients/data/: bird-migration.line
integrations/influxdb_connector/sample-influxdb-clients/go/: README.md  go.mod  go.sum  line-protocol-client-demo.go
integrations/lambda/: dashboard.json  demo.ipynb
sample_apps/rust/: Cargo.toml  README.md
sample_apps/rust/examples/: cleanup_sample.rs  ingestion_csv_sample.rs  query_sample.rs  utils.rs
sample_apps/rust/examples/utils/: query_common.rs  timestream_helper.rs
sample_apps/rust/src/: main.rs
sample_apps/rust/src/utils/: query_common.rs
tools/python/influx-migration/: README.md  influx_migration.py
